# SMRMS

./: .gitignore  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cache-v2-9b222bc161318b14db9d.json  cmakeFiles-v1-91d54c1938e27384dd16.json  codemodel-v2-6280daaaa270e20141e8.json  index-2025-07-07T13-37-27-0784.json  target-smrms-Debug-a3e1be57407525b03967.json  target-test_patient-Debug-076790a7055b41d1e9a3.json  toolchains-v1-48e48c55f5589a8e9ada.json
.github/workflows/: cmake-single-platform.yml
data/: patient.csv
include/: appointment.h  auth.h  emergency.h  medicine.h  patient.h  prescription.h  report.h
src/: appointment.c  auth.c  emergency.c  main.c  medicine.c  patient.c  prescription.c  report.c  tempCodeRunnerFile.c
tests/: test_patient.c
